--- a/Avance Digiturnos/Avance Digiturnos 9_30 AM/Digiturnos 9_30AM.ipynb
+++ b/Avance Digiturnos/Avance Digiturnos 9_30 AM/Digiturnos 9_30AM.ipynb
@@ -178,8 +178,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nombre_puntos = list(paginas.keys())\n",
-    "links_puntos = list(paginas.values())"
+    "nombre_puntos = list(paginas2.keys())\n",
+    "links_puntos = list(paginas2.values())"
    ]
   },
   {
